FIX: it is now possible to save 'Post' objects in the database. Minor layout improvements in the PowerShell format and the 'Posts' web view.

--- a/Web/Views/Posts/Index.cshtml
+++ b/Web/Views/Posts/Index.cshtml
@@ -3,9 +3,8 @@
 }
 <h2>Posts</h2>
 
-<ul>
 @foreach (var post in ViewBag.Posts)
 {
-    <li>@post.Title</li>
+    <h3>@post.Title</h3>
+    <p>@post.MarkdownContent</p>
 }
-</ul>
