Includes the connection string in the Web.config file.

--- a/Web/Views/Post/Index.cshtml
+++ b/Web/Views/Post/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model System.Collections.Generic.IEnumerable<Thoughtology.Expresso.Model.Post>
-
-@{ ViewBag.Title = "Posts"; }
+﻿@{ ViewBag.Title = "Posts"; }
 
 @foreach (var post in Model)
 {
