Adds a view to display posts by tag name.

--- a/Web/Views/Post/Index.cshtml
+++ b/Web/Views/Post/Index.cshtml
@@ -20,7 +20,7 @@
     <aside class="tags fi-pricetag-multiple">
     @foreach (var tag in post.Tags)
     {
-        <a href="#">@tag.Name</a>
+        <a href="~/tag/@tag.Name">@tag.Name</a>
     }
     </aside>
 
